# Dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dashboard/: __version__  main.py
dashboard/pages/: __init__.py  default.py  video_downloader.py  welcome_page.py
dashboard/utils/: __init__.py  disk_storage.py  page_writing.py  profiling.py
scripts/: run.sh
src/: main.py  utils.py
src/pages/: __init__.py  default.py  video_downloader.py  welcome_page.py
