[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dashboard"
authors = [{name = "Blastorios"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "streamlit==1.1.0",
    "psutil==5.8.0",
    "yt-dlp==2021.11.10",
]

[project.urls]
Home = "https://github.com/Blastorios/Dashboard"
